...
val MVPIcons.Volleyball: ImageVector
    get() {
        if (_Volleyball != null) {
            return _Volleyball!!
        }
        _Volleyball = ImageVector.Builder(
            name = "Volleyball",
            defaultWidth = 24.dp,
            defaultHeight = 24.dp,
            viewportWidth = 24f,
            viewportHeight = 24f
        ).apply {
            path(fill = SolidColor(Color(0xFF000000))) {
...
