...
    DivisionTypeSeed(id = "u14", name = "U14", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "u15", name = "U15", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "u16", name = "U16", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "u17", name = "U17", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "u18", name = "U18", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "u19", name = "U19", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "18plus", name = "18+", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "30plus", name = "30+", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "40plus", name = "40+", ratingType = DivisionRatingType.AGE),
    DivisionTypeSeed(id = "beginner", name = "Beginner", ratingType = DivisionRatingType.SKILL),
    DivisionTypeSeed(id = "intermediate", name = "Intermediate", ratingType = DivisionRatingType.SKILL),
    DivisionTypeSeed(id = "advanced", name = "Advanced", ratingType = DivisionRatingType.SKILL),
    DivisionTypeSeed(id = "open", name = "Open", ratingType = DivisionRatingType.SKILL),
...
